Update: codekit-config.json

--- a/codekit-config.json
+++ b/codekit-config.json
@@ -182,7 +182,7 @@
   },
   "projectAttributes" : {
     "bourbonEnabled" : 0,
-    "displayValue" : "jquery-tags-2",
+    "displayValue" : "Simple-Template-Layouts",
     "displayValueWasSetByUser" : 0,
     "compassEnabled" : 0
   }
