--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "Layout",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/ctekjlo/Layout",
   "authors": [
     "Afonin Artur <ctekjlo@gmail.com>"
@@ -17,6 +17,10 @@
     "tests"
   ],
   "dependencies": {
-    "normalize-css": "~2.1.3"
+    "normalize-css": "~2.1.3",
+    "requirejs": "~2.1.11",
+    "jQuery": "~2.1.0",
+    "jquery-migrate": "~1.2.1",
+    "klass": "~1.3.1"
   }
 }
